# EoS-FM

./: .gitignore  README.md  emissions.csv  pyproject.toml  run.py  terratorch_co2.py  train.sbatch
config/experiment/test/: test_eurosat.yaml
config/experiment/train/: ben_all.yaml  ben_rgb.yaml  ben_s1.yaml  caffe.yaml  cloud_cover.yaml  deepglobe_lcc.yaml  etci2021.yaml  eurosat_rgb.yaml  eurosat_s2.yaml  firerisk.yaml  inria_aerial.yaml  kenya_croptype.yaml  landcoverai.yaml  (+10 more)
config/model/: change_detection.yaml  classification.yaml  multilabel_classification.yaml  pixelwise_regression.yaml  segmentation.yaml
configs/: ben-rgb.yaml  ben-s1.yaml  ben.yaml  caffe.yaml  cloud_cover.yaml  deepglobe2018-lcc.yaml  dfc2022.yaml  dior.yaml  etci2021.yaml  eurosat-s2.yaml  eurosat.yaml  firerisk.yaml  inria_aerial.yaml  kenya-croptype.yaml  landcoverai.yaml  levircdplus.yaml  loveda.yaml  minifrance.yaml  opencanopy.yaml  oscd.yaml  potsdam.yaml  sen12ms-all.yaml  sen12ms-rgb.yaml  sen12ms-s1.yaml  sen12ms-s2.yaml
configs/base/: segmentation.yaml
configs/test/: eurosat.yaml
datamodules/: __init__.py  dior.py
eosfm/: __init__.py  band_adaptation.py  encoder.py  model_factory.py
eosfm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eosfm/datamodules/: __init__.py  base.py  bigearthnetv2.py  caffe.py  cloud_cover.py  dfc2022.py  etci2021.py  inria_aerial.py  kenya_croptype.py  minifrance.py  opencanopy.py  potsdam.py  sen12ms.py
eosfm/tasks/: __init__.py  change_detection.py  multilabel_classification.py
notebooks/: etci2021_cleaning.ipynb  tests.ipynb
